test/parsing/ferguson/reserved-locale.chpl
var locale = 0;

proc f(locale) {
}

class locale {
  var locale =0;
}

type locale = string;

proc locale() {
}

proc test() {
  try {
  } catch locale {
  }
}
